adjusted width of text and image to fix overflow issue in firefox

--- a/src/LeftPanel/SearchBar.scss
+++ b/src/LeftPanel/SearchBar.scss
@@ -29,15 +29,15 @@
   height: 100%;
   margin: 10px;
   position: absolute;
-  width: 66%;
-  margin-left: 130px;
+  width: 85%;
+  margin-left: 180px;
   text-align: left;
-  margin-top: 30px;
+  margin-top: 40px;
   display: inline-block;
 }
 
 .popup img {
-  width: 450px;
+  width: 550px;
   position: absolute;
   height: fit-content;
 }
